--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,3 +1,10 @@
+/* CLASSes*/
+
+.reset{
+    text-align: center;
+    margin-bottom: 2%;
+}
+
 .color_options{
     display: flex;
     justify-content: center;
@@ -5,15 +12,21 @@
 
 .color{
     padding: 10px;
+    z-index: 1;
 }
 
 .starting_image {
-    max-width: 100%;
-    width: auto\9; /* ie8 */
-    height: auto;
-    /* Set to the center */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 30%;
+    height: 50%;
+    transform: translate(120%, 0%);
 }
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+
+
+/* IDs */
