--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -27,5 +27,20 @@ img{
     transform: translate(120%, 0%);
 }
 
+.grid_parent {
+    width: 30%;
+    height: 50%;
+    transform: translate(105%, 0%);
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 150px 150px 150px;
+    grid-template-rows: 150px 150px 150px;
+}
+
+.grid_parent > div {
+    padding: 10px;
+    background-color: red;
+    border-radius: 5px;
+}
 
 /* IDs */
