--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,12 +1,10 @@
 img{
-    width: 100%;
-    height: 100%;
     object-fit: contain;
 }
 
 /* CLASSes*/
 
-.reset{
+.reset, .message {
     text-align: center;
     margin-bottom: 2%;
 }
@@ -18,24 +16,21 @@ img{
 
 .color{
     padding: 5px;
-    z-index: 1;
-}
-
-.starting_image {
-    /* width: 30%; */
-    /* transform: translate(120%, 0%); */
-    z-index: 3;
-    opacity: 10%;
+    z-index: 2;
 }
 
 .grid_parent {
-    /* width: 30%; */
-    transform: translate(5%, -80%);
+    background-image: url(../images/ia-logo-back.png);
+    background-size: cover;                      
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    position: fixed;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 150px 150px 150px;
-    grid-template-rows: 150px 150px 150px;
-
+    grid-template-columns: 120px 120px 120px;
+    grid-template-rows: 120px 120px 120px;
+    color: red;
 }
 
 .grid_parent > div {
@@ -49,5 +44,29 @@ img{
     transform: translate(120%, 0%);
   }
 
+  .congratulation{
+    text-align: center;
+    margin-bottom: 2%;  
+}
 
 /* IDs */
+#three {
+    grid-area: right;
+    transform: translate(-5rem, -22rem);
+    width: 190%;
+    height: 130%;
+}
+
+#four {
+    grid-area: right;
+    transform: translate(-25rem, -16rem);
+    width: 150%;
+    height: 100%;
+}
+
+#five {
+    grid-area: right;
+    transform: translate(-4.5rem, -11rem);
+    width: 190%;
+    height: 130%;
+}
