--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,6 +1,3 @@
-img{
-    object-fit: contain;
-}
 
 /* CLASSes*/
 
@@ -16,7 +13,7 @@ img{
 
 .color{
     padding: 5px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .grid_parent {
@@ -30,13 +27,10 @@ img{
     grid-gap: 10px;
     grid-template-columns: 120px 120px 120px;
     grid-template-rows: 120px 120px 120px;
-    color: red;
 }
 
 .grid_parent > div {
     padding: 10px;
-    border-radius: 5px;
-    border: 1px solid red;
 }
 
 .container {
@@ -50,23 +44,27 @@ img{
 }
 
 /* IDs */
+#one {
+    grid-area: left;
+    transform: translate(-17.7rem, -9rem);
+}
+
+#two {
+    grid-area: right;
+    transform: translate(-11.5rem, -22rem);
+}
+
 #three {
     grid-area: right;
-    transform: translate(-5rem, -22rem);
-    width: 190%;
-    height: 130%;
+    transform: translate(-3.5rem, -21rem);
 }
 
 #four {
-    grid-area: right;
-    transform: translate(-25rem, -16rem);
-    width: 150%;
-    height: 100%;
+    grid-area: left;
+    transform: translate(-22.1rem, -15.7rem);
 }
 
 #five {
     grid-area: right;
-    transform: translate(-4.5rem, -11rem);
-    width: 190%;
-    height: 130%;
+    transform: translate(-5rem, -11rem);
 }
